$Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU 2.1.0
	- [lexer] new module to do basic lexical tokenizing 
	- [json] new module to encode/decode/validate JSON objects (RFC 4627)
	- [bst] new binary search tree module
	- [misc] added u_atol and u_atof interfaces
	- [rb] malloc based implementation, both using contiguous (i.e. double
	  sized) and wrapped buffer ; make it work on Windows
	- [test] make it work on Windows
	- [uri] regex-free uri parser (now recursive descent) ; make it work on
	  MinGw ; path is now optional and has default value "/" ; fixed missing 
	  "//" in u_uri_knead_authority()
	- [config] add u_config_walk function to traverse the config tree
	- [carpal] fixed 1.0 compatibility (missing u_con)
	- [net] U_NET_OPT_DGRAM_BROADCAST to set DGRAM client socket broadcast 
	  option
	- [hmap] added u_hmap_count() to get the current number of objects stored
	  into hmap

LibU 2.0.0
	- [pqueue] added new priority queue module
	- [rb] added new ring buffer module
	- [test] completely revamped, new interfaces
	- [net] module implementation and interfaces revamped
	- [uri] complete support for RFC 3986; added u_uri_knead interface to 
	  create conformant URI strings; added tester
	- [carpal] dbg(), warn(), info(), err() and friends have been prefixed 
	  with "u_" to avoid conflicts with the <err.h> header
	- [config] u_config_print_to_fp with brace delimiters for children records;
	  documentation fixes by Mickael Auger ; don't dump the 'include' 
	  directive when serializing and/or saving an u_config_t object to 
	  file (would break semantical equivalence) 
	- [hmap] added u_hmap_foreach_arg which accepts a user defined parameter
	  that is supplied to the callback function ; add "easy" interface to
	  simplify some common use cases ; updated docs
	- [array] u_array_set_ptr and u_array_get_ptr interfaces changed;