@@ -3,6 +3,7 @@ $Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU 2.1.0
+	- [string] new interface u_string_detach_cstr
 	- [lexer] new module to do basic lexical tokenizing 
 	- [json] new module to encode/decode/validate JSON objects (RFC 4627)
 	- [bst] new binary search tree module
